--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "My Personal Web Page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node webpack.dev-server.js",
+    "build": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors --watch",
+    "start":"node ./node_modules/concurrently/src/main.js --kill-others \"npm run serve\" \"npm run build\""
   },
   "repository": {
     "type": "git",
@@ -20,5 +23,20 @@
   "bugs": {
     "url": "https://github.com/brion25/brion25/issues"
   },
-  "homepage": "https://github.com/brion25/brion25#readme"
+  "homepage": "https://github.com/brion25/brion25#readme",
+  "devDependencies": {
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "concurrently": "^1.0.0",
+    "jade": "^1.11.0",
+    "jade-loader": "^0.8.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "angular": "^1.4.8",
+    "angular-route": "^1.4.8"
+  }
 }
