--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node webpack.dev-server.js",
-    "build": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors --watch",
-    "start":"node ./node_modules/concurrently/src/main.js --kill-others \"npm run serve\" \"npm run build\""
+    "build": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors",
+    "watch": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors --watch",
+    "start": "node ./node_modules/concurrently/src/main.js --kill-others \"npm run serve\" \"npm run watch\""
   },
   "repository": {
     "type": "git",
@@ -30,13 +31,22 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "concurrently": "^1.0.0",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "angular": "^1.4.8",
-    "angular-route": "^1.4.8"
+    "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
+    "angular-material": "^0.11.4",
+    "angular-route": "^1.4.8",
+    "localforage": "^1.3.1"
   }
 }
