--- a/versions/v1/package.json
+++ b/versions/v1/package.json
@@ -1,7 +1,8 @@
 {
   "name": "my-page",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "My Personal Web Page",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node webpack.dev-server.js",
@@ -14,7 +15,7 @@
     "url": "git+https://github.com/brion25/brion25.git"
   },
   "keywords": [
-    "React",
+    "Angular",
     "Material Design",
     "Webpack"
   ],
@@ -41,9 +42,11 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "material-ui": "^0.14.4",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-tap-event-plugin": "^0.2.2"
+    "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
+    "angular-material": "^0.11.4",
+    "angular-route": "^1.4.8",
+    "localforage": "^1.3.1"
   }
 }
