--- a/package.json
+++ b/package.json
@@ -35,13 +35,18 @@
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
     "node-sass": "^3.4.2",
+    "react-router": "^2.0.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "autoprefixer": "^6.3.3",
+    "babel-preset-react": "^6.5.0",
+    "classnames": "^2.2.3",
     "material-ui": "^0.14.4",
+    "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-tap-event-plugin": "^0.2.2"
