--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-preset-react": "^6.5.0",
     "classnames": "^2.2.3",
     "material-ui": "^0.14.4",
+    "moment": "^2.12.0",
     "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
