--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "concurrently": "^1.0.0",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
+    "html-webpack-plugin": "^2.15.0",
+    "image-webpack-loader": "^1.7.0",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
     "node-sass": "^3.4.2",
@@ -45,11 +47,14 @@
     "autoprefixer": "^6.3.3",
     "babel-preset-react": "^6.5.0",
     "classnames": "^2.2.3",
+    "flexboxgrid-sass": "^8.0.3",
     "material-ui": "^0.14.4",
     "moment": "^2.12.0",
+    "node-fetch": "^1.4.1",
     "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.2.4",
     "react-tap-event-plugin": "^0.2.2"
   }
 }
