--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node webpack.dev-server.js",
     "build": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors",
-    "watch": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors --watch",
+    "watch": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors --watch --display-error-details",
     "start": "node ./node_modules/concurrently/src/main.js --kill-others \"npm run serve\" \"npm run watch\""
   },
   "repository": {
@@ -25,30 +25,39 @@
   },
   "homepage": "https://github.com/brion25/brion25#readme",
   "devDependencies": {
+    "autoprefixer": "^6.3.3",
     "babel": "^6.3.13",
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "concurrently": "^1.0.0",
     "css-loader": "^0.23.0",
+    "dotenv": "^2.0.0",
     "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.5",
+    "font-awesome": "^4.6.3",
+    "font-awesome-webpack": "0.0.4",
     "html-webpack-plugin": "^2.15.0",
     "image-webpack-loader": "^1.7.0",
+    "imports-loader": "^0.6.5",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "node-sass": "^3.4.2",
     "react-router": "^2.0.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "autoprefixer": "^6.3.3",
-    "babel-preset-react": "^6.5.0",
     "classnames": "^2.2.3",
     "flexboxgrid-sass": "^8.0.3",
-    "material-ui": "^0.14.4",
+    "history": "^2.1.1",
     "moment": "^2.12.0",
     "node-fetch": "^1.4.1",
     "postcss-loader": "^0.8.1",
