--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.2.4",
-    "react-tap-event-plugin": "^0.2.2"
+    "react-tap-event-plugin": "^0.2.2",
+    "twitter-fetcher": "^15.0.2"
   }
 }
