--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "node webpack.dev-server.js",
     "build": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors",
     "watch": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors --watch --display-error-details",
-    "start": "node ./node_modules/concurrently/src/main.js --kill-others \"npm run serve\" \"npm run watch\""
+    "start": "node ./webpack.dev-server"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "imports-loader": "^0.6.5",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "node-sass": "^3.4.2",
@@ -63,8 +64,10 @@
     "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.5",
     "react-router": "^2.2.4",
     "react-tap-event-plugin": "^0.2.2",
+    "redux": "^3.5.2",
     "twitter-fetcher": "^15.0.2"
   }
 }
