--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
+    "flexboxgrid": "^6.3.0",
     "flexboxgrid-sass": "^8.0.3",
     "history": "^2.1.1",
     "moment": "^2.12.0",
@@ -68,6 +69,7 @@
     "react-router": "^2.2.4",
     "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.5.2",
+    "svg-url-loader": "^1.0.3",
     "twitter-fetcher": "^15.0.2"
   }
 }
