--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chart.js": "^2.2.0-rc.2",
     "concurrently": "^1.0.0",
     "css-loader": "^0.23.0",
     "dotenv": "^2.0.0",
