--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "node-fetch": "^1.4.1",
     "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.4",
