--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "flexboxgrid": "^6.3.0",
     "flexboxgrid-sass": "^8.0.3",
     "history": "^2.1.1",
+    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.12.0",
     "node-fetch": "^1.4.1",
     "postcss-loader": "^0.8.1",
@@ -71,6 +72,7 @@
     "react-router": "^2.2.4",
     "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "svg-url-loader": "^1.0.3",
     "twitter-fetcher": "^15.0.2"
   }
