--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.0",
   "description": "My Personal Web Page",
   "scripts": {
-    "start": "hjs-dev-server"
+    "start": "hjs-dev-server",
+    "build": "node ./node_modules/webpack/bin/webpack.js  --config webpack.config.js --progress --colors"
   },
   "repository": {
     "type": "git",
