--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "hjs-webpack": "^8.4.3",
+    "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
@@ -41,6 +42,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "0.0.4",
+    "particles.js": "^2.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
