--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
-    "hjs-webpack": "8.4.3",
+    "hjs-webpack": "^8.4.3",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "node-sass": "^4.3.0",
@@ -37,7 +37,7 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "1.14.0"
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
