--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ deploy:
   github_token: $githubToken
   local_dir: dist
   on:
-    branch: dev
+    all_branches: true
+    branch: master
 after_deploy:
 - "echo 'deployed!'"
