--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-string": "^2.0.2",
-    "rollup-watch": "^4.3.1"
+    "rollup-watch": "^4.3.1",
+    "yargs": "^12.0.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
