--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   github_token: $githubToken
   local_dir: dist
   on:
-    all_branches: true
-    branch: master
+    branch: dev
+    target-branch: master
 after_deploy:
 - "echo 'deployed!'"
