--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ branches:
   only:
     - dev
 script:
-  - bash scripts/deploy.sh
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash scripts/deploy.sh; fi'
