--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
   - "stable"
 branches:
-  except:
-    - master
+  only:
+    - dev
 script:
   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash scripts/deploy.sh; fi'
   - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm run lint; fi'
