--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
     - dev
 script:
-  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm run lint; fi'
+  - npm run lint
 deploy:
   provider: script
   script: bash scripts/deploy.sh
