--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^5.7.0",
+    "node-sass": "^4.9.4",
     "rollup": "^0.65.2",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-fill-html": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-string": "^2.0.2",
+    "rollup-pluginutils": "^2.3.3",
     "rollup-watch": "^4.3.1",
     "yargs": "^12.0.2"
   },
