--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint ./src",
     "build": "rollup -c",
+    "travis": "cross-env npm run build -- --mailer-id=$MAILER_ID",
     "build:watch": "rollup -c --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,12 +26,14 @@
   "homepage": "https://github.com/brion25/brion25.github.io#readme",
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "cross-env": "^5.2.0",
     "eslint": "^5.7.0",
     "node-sass": "^4.9.4",
     "rollup": "^0.65.2",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-fill-html": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-string": "^2.0.2",
     "rollup-pluginutils": "^2.3.3",
@@ -39,10 +42,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
+    "@polymer/app-layout": "^3.0.1",
     "@polymer/app-route": "^3.0.2",
+    "@polymer/iron-form": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-pages": "^3.0.1",
     "@polymer/iron-selector": "^3.0.1",
+    "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-input": "^3.0.1",
     "@polymer/polymer": "^3.0.5",
     "@webcomponents/webcomponentsjs": "^2.1.3"
   }
