--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./src",
     "compile": "rollup -c",
-    "build": "cross-env npm run compile -- --mailer-id=$MAILER_ID",
+    "build": "cross-env npm run compile -- --mailer-id=$MAILER_ID --backendless-app-id=$BACKENDLESS_APP_ID --backendless-api-key=$BACKENDLESS_API_KEY",
     "build:watch": "npm run compile -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -55,6 +55,7 @@
     "@polymer/polymer": "^3.0.5",
     "@webcomponents/webcomponentsjs": "^2.1.3",
     "backendless": "5.0.0",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "showdown": "^1.9.0"
   }
 }
