--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./src",
     "compile": "rollup -c",
-    "build": "cross-env npm run compile -- --mailer-id=$MAILER_ID",
+    "build": "cross-env npm run compile -- --mailer-id=$MAILER_ID --backendless-app-id=$BACKENDLESS_APP_ID --backendless-api-key=$BACKENDLESS_API_KEY",
     "build:watch": "npm run compile -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,6 +32,7 @@
     "rollup": "^0.65.2",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-fill-html": "^1.1.0",
+    "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-serve": "^0.4.2",
@@ -49,8 +50,11 @@
     "@polymer/iron-pages": "^3.0.1",
     "@polymer/iron-selector": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-card": "^3.0.1",
     "@polymer/paper-input": "^3.0.1",
     "@polymer/polymer": "^3.0.5",
-    "@webcomponents/webcomponentsjs": "^2.1.3"
+    "@webcomponents/webcomponentsjs": "^2.1.3",
+    "moment": "^2.22.2",
+    "showdown": "^1.9.0"
   }
 }
